--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.4",
     "multer": "^1.4.1",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "pdfkit": "^0.8.3"
   }
 }
